classDiagram

    class Fornecedor {
        +Integer id_fornecedor
        -String cnpj
        -String razaoSocial
        -String nomeFantasia
        -String email
        -String telefone
        -Endereco endereco

        +pesquisarFornecedor(cnpj)
        +novoFornecedor()
        +atualizarFornecedor(cnpj)
        +deletarFornecedor(cnpj)
        +verPedidos(cnpj)
    }

    class ItemCompra {
        +Integer id_item_compra
        -Produto produto
        -Integer quantidade
        -Double preco_unitario
        -Double subtotal
        -Compra compra
    }

    class Compra {
        +Integer id_compra
        -Fornecedor fornecedor
        -List itens
        -DateTime data
        -Double total

        +novaCompra()
        +pesquisarCompra(id_compra)
        +finalizarCompra()
    }

    class Cliente {
        +Integer id_cliente
        -String cpf
        -String nome
        -Endereco endereco
        -String email
        -List telefone
        
        +pesquisarCliente(cpf)
        +novoCliente()
        +atualizarCliente(cpf)
        +deletarCliente(cpf)
        +verPedidos(cpf)
    }

    class ItemVenda {
        +Integer id_item_venda
        -Produto produto
        -Integer quantidade
        -Double preco_unitario
        -Double subtotal
        -Venda venda
    }

    class Venda {
        +Integer id_venda
        -Cliente cliente
        -List itens
        -DateTime data
        -Double total

        +novaVenda()
        +pesquisarVenda(id_venda)
        +finalizarVenda()
    }

    class Produto {
        +Integer id_produto
        -String nome
        -Double preco
        -String descricao

        +pesquisarProduto(id_produto)
        +novoProduto()
        +atualizarProduto(id_produto)
        +deletarProduto(id_produto)
    }

    class Endereco {
        +Integer id_endereco
        -String cep
        -String logradouro
        -Integer numero
        -String complemento
        -String bairro
        -String cidade
        -String estado
        -Integer id_cliente
        -Integer id_fornecedor
    }

    class Estoque {
        +Integer id_produto
        -Double custo_unitario
        -Integer quantidade
        -Double total
    }

    Fornecedor "1" -- "*" Compra : "fornece"
    Compra "1" -- "*" ItemCompra : "contém"
    Cliente "1" -- "*" Venda : "realiza"
    Venda "1" -- "*" ItemVenda : "contém"
    ItemCompra "*" -- "1" Produto : "refere-se a"
    ItemVenda "*" -- "1" Produto : "refere-se a"
    Produto "1" -- "1" Estoque : "tem"
    Cliente "1" -- "*" Endereco : "possui"
    Fornecedor "1" -- "*" Endereco : "possui"
